fix: a few issues with scrolling and overflow of emails in task buttons

--- a/src/app/tasks/tasks.module.scss
+++ b/src/app/tasks/tasks.module.scss
@@ -435,6 +435,9 @@
   font-weight: 700;
   cursor: pointer;
   transition: all 0.2s ease;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 
   &:hover {
     background: #22c55e;
